📝 chore(User Data with Logistic Regression.ipynb): add data pre-processing step and import necessary libraries 🐛 fix(User Data with Logistic Regression.ipynb): fix typo in import statement ✨ feat(User Data with Logistic Regression.ipynb): add code to read user data from an Excel file The notebook now includes a new markdown cell that describes the data pre-processing step. The necessary libraries (numpy, matplotlib.pyplot, and pandas) are imported in the code cell. Additionally, a code cell has been added to read user data from an Excel file named "user_data.xlsx". A typo in the import statement has also been fixed.

--- a/30-Jun-2023/User Data with Logistic Regression.ipynb
+++ b/30-Jun-2023/User Data with Logistic Regression.ipynb
@@ -1,15 +1,54 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "# Data Pre-procesing Step"
+   ],
    "metadata": {
-    "collapsed": true
-   },
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    ""
-   ]
+    "import numpy as nm\n",
+    "import matplotlib.pyplot as mtp\n",
+    "import pandas as pd"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T02:39:58.853803800Z",
+     "start_time": "2023-06-30T02:39:56.925223Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_excel('../user_data.xlsx')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-30T02:40:59.236572800Z",
+     "start_time": "2023-06-30T02:40:58.627883600Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
