Code some jupyter files

--- a/14-Jul-2023/Use PCS for Breast Cancer.ipynb
+++ b/14-Jul-2023/Use PCS for Breast Cancer.ipynb
@@ -2,14 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-14T01:42:07.040367700Z",
+     "start_time": "2023-07-14T01:42:06.989917200Z"
+    }
    },
    "outputs": [],
    "source": [
-    ""
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
