--- a/30-Jun-2023/User Data with Logistic Regression.ipynb
+++ b/30-Jun-2023/User Data with Logistic Regression.ipynb
@@ -212,10 +212,10 @@
     "from matplotlib.colors import ListedColormap\n",
     "\n",
     "x_set, y_set = x_train, y_train\n",
+    "\n",
     "x1, x2 = nm.meshgrid(nm.arange(start=x_set[:, 0].min() - 1, stop\n",
     "=x_set[:, 0].max() + 1, step=0.01),\n",
-    "                     nm.arange(start=x_set[:, 1].min() - 1, stop=x_set[:, 1].max()\n",
-    "                                                                 + 1, step=0.01))\n",
+    "                     nm.arange(start=x_set[:, 1].min() - 1, stop=x_set[:, 1].max() + 1, step=0.01))\n",
     "mtp.contourf(x1, x2, classifier.predict(nm.array([x1.ravel(),\n",
     "                                                  x2.ravel()]).T).reshape(x1.shape),\n",
     "             alpha=0.75, cmap=ListedColormap(('purple', 'green')))\n",
