--- a/Multinomial logistic regression/SoftMaxRegression-MNIST.ipynb
+++ b/Multinomial logistic regression/SoftMaxRegression-MNIST.ipynb
@@ -2,15 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-08-04T00:59:00.684117700Z",
+     "start_time": "2023-08-04T00:58:57.913139200Z"
+    }
    },
    "outputs": [],
    "source": [
-    ""
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.datasets import fetch_openml\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\taqua\\miniconda3\\lib\\site-packages\\sklearn\\datasets\\_openml.py:968: FutureWarning: The default value of `parser` will change from `'liac-arff'` to `'auto'` in 1.4. You can set `parser='auto'` to silence this warning. Therefore, an `ImportError` will be raised from 1.4 if the dataset is dense and pandas is not installed. Note that the pandas parser may return different data types. See the Notes Section in fetch_openml's API doc for details.\n",
+      "  warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "mnist = fetch_openml('mnist_784')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-04T01:00:24.747319Z",
+     "start_time": "2023-08-04T00:59:37.144317100Z"
+    }
+   },
+   "id": "162c8e1dcf516ecf"
   }
  ],
  "metadata": {
