--- a/Multinomial logistic regression/wine quality - white.ipynb
+++ b/Multinomial logistic regression/wine quality - white.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-08-04T02:34:53.385366500Z",
-     "start_time": "2023-08-04T02:34:53.346222400Z"
+     "end_time": "2023-08-04T02:48:57.562758500Z",
+     "start_time": "2023-08-04T02:48:56.497664800Z"
     }
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import math as m\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -59,22 +66,30 @@
    "id": "c9be23784644081d"
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "# Tách dữ liệu train và test"
-   ],
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "74a8bff91677ec55"
+   "id": "ba11d09c4634ad12"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5ae61c181a505f8f"
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
@@ -86,6 +101,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e2ce960517afa532"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Tách dữ liệu train và test"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "74a8bff91677ec55"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "outputs": [],
    "source": [
@@ -94,7 +129,6 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-04T02:34:55.627818500Z",
      "start_time": "2023-08-04T02:34:55.616164300Z"
     }
    },
@@ -110,7 +144,6 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-04T02:34:55.667612300Z",
      "start_time": "2023-08-04T02:34:55.627818500Z"
     }
    },
@@ -126,11 +159,56 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-04T02:34:55.667612300Z",
      "start_time": "2023-08-04T02:34:55.645409Z"
     }
    },
    "id": "ff587cc0cf46ee0f"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Xây dựng mô hình Logistic Regression"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "799afbb6693c3a56"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "model = LogisticRegression()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1c813606eb39fa63"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "model.fit(X_train, y_train)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "48138b06ac2e45ef"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "65e90d8273c1b079"
   }
  ],
  "metadata": {
