--- a/support vector machine/SVM - electrical grid stability.ipynb
+++ b/support vector machine/SVM - electrical grid stability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "data = pd.read_csv('../data/electrical+grid+stability+simulated+data/Data_for_UCI_named.csv')\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "data.head()"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "sns.countplot(x='stabf', data=data, palette='hls')\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "cat_features = ['stabf']\n",
@@ -120,12 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "data_features = data.columns.values.tolist()\n",
     "print(data_features)\n",
-    "remove_features = ['stab', 'stabf_unstable']\n",
+    "remove_features = ['stabf', 'stabf_unstable']\n",
     "to_keep_features = [feature for feature in data_features if feature not in remove_features]\n",
     "data_final = data[to_keep_features]\n",
     "data_final.head()"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "X = np.array(data_final.loc[:, data_final.columns != 'stabf_stable'])\n",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "y = np.array(data_final.loc[:, data_final.columns == 'stabf_stable'])\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "train_features, test_features, train_targets, test_targets = train_test_split(X, y, test_size=0.3, random_state=0)\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "train_targets = train_targets.reshape(train_targets.shape[0])\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "pd.crosstab(train_targets, train_targets).plot(kind='bar')\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "pd.crosstab(test_targets, test_targets).plot(kind='bar')\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "svmClassifier = SVC(kernel='linear', C = 1e5)\n",
