--- a/ISLP/9_6 - Lab_ Support Vector Machines.ipynb
+++ b/ISLP/9_6 - Lab_ Support Vector Machines.ipynb
@@ -2,13 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-08-04T08:37:47.977477Z",
+     "start_time": "2023-08-04T08:37:45.234255600Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'load_data' from 'ISLP' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 4\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m subplots, cm\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodel_selection\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mskm\u001B[39;00m\n\u001B[1;32m----> 4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mISLP\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m load_data, confusion_table\n",
+      "\u001B[1;31mImportError\u001B[0m: cannot import name 'load_data' from 'ISLP' (unknown location)"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib.pyplot import subplots, cm\n",
+    "import sklearn.model_selection as skm\n",
+    "from ISLP import load_data, confusion_table"
+   ]
   }
  ],
  "metadata": {
