DL1 - Done model KNeighborsClassifier

--- a/16-Jun-2023/Iris with KNN.ipynb
+++ b/16-Jun-2023/Iris with KNN.ipynb
@@ -988,8 +988,7 @@
       "\n",
       "    accuracy                           0.94        50\n",
       "   macro avg       0.94      0.96      0.94        50\n",
-      "weighted avg       0.95      0.94      0.94        50\n",
-      "\n"
+      "weighted avg       0.95      0.94      0.94        50\n"
      ]
     }
    ],
@@ -1110,8 +1109,7 @@
       "\n",
       "    accuracy                           0.92        50\n",
       "   macro avg       0.92      0.94      0.92        50\n",
-      "weighted avg       0.94      0.92      0.92        50\n",
-      "\n"
+      "weighted avg       0.94      0.92      0.92        50\n"
      ]
     }
    ],
@@ -1214,15 +1212,6 @@
      "end_time": "2023-06-16T08:57:02.948133600Z",
      "start_time": "2023-06-16T08:57:02.927188Z"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
    }
   }
  ],
