--- a/Báo Cáo Cuối Kỳ/Dữ liệu 1/DL1 - Decision Tree.ipynb
+++ b/Báo Cáo Cuối Kỳ/Dữ liệu 1/DL1 - Decision Tree.ipynb
@@ -16,9 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import numpy as np"
    ],
    "metadata": {
     "collapsed": false,
