--- a/Báo Cáo Cuối Kỳ/Dữ liệu 2/DL2 - K-Nearest Neighbors.ipynb
+++ b/Báo Cáo Cuối Kỳ/Dữ liệu 2/DL2 - K-Nearest Neighbors.ipynb
@@ -1,14 +1,311 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
+   "cell_type": "markdown",
+   "source": [
+    "# Import libraries"
+   ],
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
+   "id": "ad6b087f7b2b1b24"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:37.816957500Z",
+     "start_time": "2023-08-15T02:08:36.893691600Z"
+    }
+   },
+   "id": "23da803d1c4007b4"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Load data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "216d6666d2349f7b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   laufkont  laufzeit  moral  verw  hoehe  sparkont  beszeit  rate  famges  \\\n0         1        18      4     2   1049         1        2     4       2   \n1         1         9      4     0   2799         1        3     2       3   \n2         2        12      2     9    841         2        4     2       2   \n3         1        12      4     0   2122         1        3     3       3   \n4         1        12      4     0   2171         1        3     4       3   \n\n   buerge  ...  verm  alter  weitkred  wohn  bishkred  beruf  pers  telef  \\\n0       1  ...     2     21         3     1         1      3     2      1   \n1       1  ...     1     36         3     1         2      3     1      1   \n2       1  ...     1     23         3     1         1      2     2      1   \n3       1  ...     1     39         3     1         2      2     1      1   \n4       1  ...     2     38         1     2         2      2     2      1   \n\n   gastarb  kredit  \n0        2       1  \n1        2       1  \n2        2       1  \n3        1       1  \n4        1       1  \n\n[5 rows x 21 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>laufkont</th>\n      <th>laufzeit</th>\n      <th>moral</th>\n      <th>verw</th>\n      <th>hoehe</th>\n      <th>sparkont</th>\n      <th>beszeit</th>\n      <th>rate</th>\n      <th>famges</th>\n      <th>buerge</th>\n      <th>...</th>\n      <th>verm</th>\n      <th>alter</th>\n      <th>weitkred</th>\n      <th>wohn</th>\n      <th>bishkred</th>\n      <th>beruf</th>\n      <th>pers</th>\n      <th>telef</th>\n      <th>gastarb</th>\n      <th>kredit</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>18</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1049</td>\n      <td>1</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1</td>\n      <td>...</td>\n      <td>2</td>\n      <td>21</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>9</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2799</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>3</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>36</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>12</td>\n      <td>2</td>\n      <td>9</td>\n      <td>841</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>23</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>12</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2122</td>\n      <td>1</td>\n      <td>3</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>39</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>12</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2171</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>3</td>\n      <td>1</td>\n      <td>...</td>\n      <td>2</td>\n      <td>38</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 21 columns</p>\n</div>"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_table('SouthGermanCredit.asc', sep=' ')\n",
+    "df.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:37.866494300Z",
+     "start_time": "2023-08-15T02:08:37.820961200Z"
+    }
+   },
+   "id": "17a67f6f721b6728"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Build a K-Nearest Neighbors model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "af1bc06d979382ee"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.292602800Z",
+     "start_time": "2023-08-15T02:08:37.866494300Z"
+    }
+   },
+   "id": "aa6e5c2d17265fbe"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Preprocessing"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "684055aff3619a30"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "df = df.dropna()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.308908600Z",
+     "start_time": "2023-08-15T02:08:39.296608900Z"
+    }
+   },
+   "id": "778911234ed43085"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "X = df.drop(['kredit'], axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.345608500Z",
+     "start_time": "2023-08-15T02:08:39.312816900Z"
+    }
+   },
+   "id": "ea299be05f46b069"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "y = df['kredit'] "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.346607400Z",
+     "start_time": "2023-08-15T02:08:39.328952500Z"
+    }
+   },
+   "id": "12e2506421390cb2"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.356924700Z",
+     "start_time": "2023-08-15T02:08:39.343599500Z"
+    }
+   },
+   "id": "e96fb9c0cf4538c4"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "# Function to test each column\n",
+    "def test_column(col):\n",
+    "    model = KNeighborsClassifier(n_neighbors = 10, p = 2)\n",
+    "    model.fit(X_train[col].to_frame(), y_train)\n",
+    "    y_pred = model.predict(X_test[col].to_frame())\n",
+    "    return accuracy_score(y_test, y_pred)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.394664700Z",
+     "start_time": "2023-08-15T02:08:39.360920800Z"
+    }
+   },
+   "id": "215bd07ec30adabe"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "def test_columns(cols):\n",
+    "    model = KNeighborsClassifier(n_neighbors = 10, p = 2)\n",
+    "    model.fit(X_train[cols], y_train)\n",
+    "    y_pred = model.predict(X_test[cols])\n",
+    "    return accuracy_score(y_test, y_pred)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.395656400Z",
+     "start_time": "2023-08-15T02:08:39.374336400Z"
+    }
+   },
+   "id": "770c4b7871772e59"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "def test_all():\n",
+    "    model = KNeighborsClassifier(n_neighbors = 10, p = 2)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    return accuracy_score(y_test, y_pred)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.406947200Z",
+     "start_time": "2023-08-15T02:08:39.391552300Z"
+    }
+   },
+   "id": "65a8ea4baa21df9f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "# Test each column\n",
+    "# for column in X_train.columns:\n",
+    "#     print(column, test_column(column))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.418366500Z",
+     "start_time": "2023-08-15T02:08:39.406947200Z"
+    }
+   },
+   "id": "5d14ed42d93f593c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "# Test columns in pairs\n",
+    "# for col1 in X_train.columns:\n",
+    "#     for col2 in X_train.columns:\n",
+    "#         if col1 < col2:\n",
+    "#             print(col1, col2, test_columns([col1, col2]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.452168Z",
+     "start_time": "2023-08-15T02:08:39.420384600Z"
+    }
+   },
+   "id": "4140b56050c61783"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.645"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Accuracy of all columns\n",
+    "test_all()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-15T02:08:39.665385600Z",
+     "start_time": "2023-08-15T02:08:39.440341800Z"
+    }
+   },
+   "id": "60c9ae31ed0ab3ec"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "eb67ad6c0b9e6598"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8c29c74ef16dfd27"
   }
  ],
  "metadata": {
